# streampager

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs  clippy.toml
doc/: sp.1.txt.tpl
examples/: controller_example.rs  streams_example.rs  streams_example.sh
examples/input/: dec_line_drawing.txt  hyperlinks.txt  lorem_ipsum.txt  lorem_ipsum_unwrapped.txt  overstrike.txt  select_graphic_rendition.txt
examples/keymaps/: markbt
src/: action.rs  app.rs  bar.rs  bindings.rs  buffer.rs  buffer_cache.rs  cat.rs  command.rs  config.rs  control.rs  controlled_file.rs  direct.rs  display.rs  error.rs  event.rs  file.rs  help.rs  help.txt  keymap_error.rs  keymap_file.rs  keymap_macro.rs  lib.rs  line.rs  line_cache.rs  line_drawing.rs  loaded_file.rs  main.rs  overstrike.rs  pager.rs  progress.rs  prompt.rs  prompt_history.rs  refresh.rs  ruler.rs  screen.rs  search.rs  util.rs
src/keymaps/: default.rs  error.rs  mod.rs
