[package]
name = "streampager"
version = "0.5.0"
authors = ["Mark Thomas <markbt@efaref.net>"]
edition = "2018"
description = "streampager is a pager for command output or large files"
documentation = "https://github.com/markbt/streampager"
homepage = "https://github.com/markbt/streampager"
repository = "https://github.com/markbt/streampager"
readme = "README.md"
keywords = ["pager", "less", "more"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
build = "build.rs"

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
bit-set = "0.5.1"
clap = { version = "2.32.0", features = ["wrap_help"] }
failure = "0.1.5"
lazy_static = "1.3.0"
lru-cache = "0.1.2"
memmap = "0.7.0"
regex = "1.1.5"
scopeguard = "1.0.0"
smallvec = "0.6.9"
terminfo = "0.6"
termwiz = "0.3.1"
unicode-segmentation = "1.2.1"
unicode-width = "0.1.5"
vec_map = "0.8.1"

[build-dependencies]
clap = "2.32.0"
