[package]
name = "streampager"
version = "0.10.1"
authors = ["Mark Juggurnauth-Thomas <markbt@efaref.net>"]
edition = "2018"
description = "streampager is a pager for command output or large files"
repository = "https://github.com/markbt/streampager"
readme = "README.md"
keywords = ["pager", "less", "more"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
build = "build.rs"
default-run = "sp"
include = ["src/**/*", "LICENSE.md", "README.md", "doc/sp.1.txt.tpl", "build.rs"]

[features]
default = ["keymap-file"]

# Should streampager be permitted to load user-defined keymap files.
keymap-file = ["pest", "pest_derive"]

[[bin]]
name = "sp"
path = "src/bin/sp/main.rs"

[[bin]]
name = "spp"
path = "src/bin/spp/main.rs"

[dependencies]
anyhow = "1.0.20"
bit-set = "0.5.1"
clap = { version = "2.32.0", features = ["wrap_help"] }
dirs = "3.0.1"
enum_dispatch = "0.3.4"
indexmap = "1.3.2"
lazy_static = "1.3.0"
lru = "0.7.1"
memmap2 = "0.5.5"
notify = "4.0.15"
pest = { version = "2.1", optional = true }
pest_derive = { version = "2.1", optional = true }
regex = "1.1.5"
scopeguard = "1.0.0"
serde = {version="1.0", features=["derive"]}
smallvec = "1.1.0"
tempfile = "3.1.0"
terminfo = "0.7"
termwiz = "0.17.1"
toml = "0.5.6"
unicode-segmentation = "1.2.1"
unicode-width = "0.1.5"
vec_map = "0.8.1"
thiserror = "1.0.23"

[build-dependencies]
clap = "2.32.0"

[dev-dependencies]
pipe = "0.4.0"
